--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title:            Scribble
-description:      A jekyll theme. Because I scribble.
-url:              # Site url.
-signoff:          # Your name.
+title:            Justin Redd
+description:      Notes and inspirations
+url:              https://justinredd.github.io
+signoff:          Justin Redd
 disqus_shortname: # disqus comment thread for post header options. ( leave blank if unwanted. )
 facebook_appid:   # appid for like button, remove from /_includes/share.html if unwanted.
 google_analytics: # set tracking, remove from /javascripts/basic.js if unwanted.
@@ -9,14 +9,14 @@ google_analytics: # set tracking, remove from /javascripts/basic.js if unwanted.
 links:
   - name:         About
     url:          /about
-  - name:         Blog
-    url:          http://muan.co
+  - name:         Twitter
+    url:          https://twitter.com/justinredd
     external:     true
   - name:         Email
-    url:          mailto:hello@muan.co
+    url:          mailto:justinredd@gmail.com
     external:     true
   - name:         GitHub
-    url:          http://github.com/muan
+    url:          http://github.com/justinredd
     external:     true
 highlighter:      pygments
 permalink:        pretty
